<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>cloud.codestore</groupId>
    <artifactId>desktop-app</artifactId>
    <version>2.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>{CodeStore}</name>
    <description>The {CodeStore} desktop application.</description>

    <modules>
        <module>core</module>
        <module>client</module>
        <module>bundle</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- @Nonnull / @Nullable -->
        <dependency>
            <groupId>com.google.code.findbugs</groupId>
            <artifactId>jsr305</artifactId>
            <version>3.0.2</version>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.10.3</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>5.11.0</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <groupId>org.junit.jupiter</groupId>
                    <artifactId>junit-jupiter-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>net.bytebuddy</groupId>
                    <artifactId>byte-buddy</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.25.3</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>3.1.3</version>
                <!-- TODO remove as soon as Java 21 is officially supported -->
                <!-- https://github.com/osundblad/intellij-annotations-instrumenter-maven-plugin/issues/61 -->
                <configuration>
                    <groupId>se.eris</groupId>
                    <artifactId>notnull-instrumenter-maven-plugin</artifactId>
                    <version>1.1.2-SNAPSHOT</version>
                    <packaging>maven-plugin</packaging>
                    <file>${basedir}/lib/notnull-instrumenter-maven-plugin-1.1.2-SNAPSHOT.jar</file>
                </configuration>
            </plugin>

            <plugin>
                <!-- processes @NonNull and @Nullable Annotations -->
                <groupId>se.eris</groupId>
                <artifactId>notnull-instrumenter-maven-plugin</artifactId>
                <version>1.1.2-SNAPSHOT</version>
                <configuration>
                    <notNull>
                        <param>javax.annotation.Nonnull</param>
                    </notNull>
                    <nullable>
                        <param>javax.annotation.Nullable</param>
                    </nullable>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>instrument</goal>
                            <goal>tests-instrument</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

</project>